--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<title>Landing</title>
 </head>
 <body>
-hewwo
-<a>fayelinyaluna.carrd.co</a>
+hewwo<br>
+<a href=fayelinyaluna.carrd.co>fayelinyaluna.carrd.co</a>
 </body>
 </html>
