Minor edit (adds paragraph tag)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Landing</title>
 </head>
 <body>
-hewwo<br>
+<p>hewwo</p><br>
 <a href=https://fayelinyaluna.carrd.co>fayelinyaluna.carrd.co</a>
 </body>
 </html>
