--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/styles.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Landing</title>
@@ -9,7 +10,8 @@
 <body>
 <div class="container">
 <h1>Under Construction</h1><br>
-My links: <a href=https://fayelinyaluna.carrd.co>fayelinyaluna.carrd.co</a>
+<p>hewwo</p><br>
+<p>My links: <a href=https://fayelinyaluna.carrd.co>fayelinyaluna.carrd.co</a></p>
 </div>
 </body>
 </html>
