Added rudimentary links list

--- a/index.html
+++ b/index.html
@@ -9,9 +9,64 @@
 </head>
 <body>
 <div class="container">
-<h1>Under Construction</h1><br>
-<p>hewwo</p><br>
-<p>My links: <a href=https://fayelinyaluna.carrd.co>fayelinyaluna.carrd.co</a></p>
+
+	<div class=container align=center>
+		<img src="img/header.png" class="img-fluid" alt="about me header">
+	</div>
+
+	<h1>Under Construction</h1>
+	<p>Excuse the dust!</p><br>
+
+	<h3>Main Links</h3>
+	<ul class="list-group">
+		<li class="list-group-item"><i class="bi bi-link-45deg" style="color:#FF9900"></i> 
+			Prettier version: 
+			<a href=https://fayelinyaluna.carrd.co>fayelinyaluna.carrd.co</a></li>
+		<li class="list-group-item"><i class="bi bi-youtube" style="color:red"></i> 
+			YouTube (Main): 
+			<a href=https://youtube.com/@FayelinyaLuna target=blank>@FayelinyaLuna</a></li>
+		<li class="list-group-item"><i class="bi bi-twitch" style="color:#9146FF"></i> 
+			Twitch: 
+			<a href=https://twitch.tv/FayelinyaLuna target=blank>FayelinyaLuna</a></li>
+		<li class="list-group-item"><i class="bi bi-bluesky" style="color:#42BBFF"></i>
+			Bluesky: 
+			<a href=https://bsky.app/profile/fayelinyaluna.moe target=blank>@fayelinyaluna.moe</a></li>
+		<li class="list-group-item"><i class="bi bi-twitter" style="color:#63E3FF"></i>/<i class="bi bi-twitter-x"></i> 
+			Twitter (Public): 
+			<a href=https://twitter.com/FayelinyaLunaVT target=blank>@FayelinyaLunaVT</a></li>
+		<li class="list-group-item"><i class="bi bi-youtube" style="color:#9C2F00"></i> 
+			Fayelinya's Memory Book (VTuber Clips YT): 
+			<a href=https://youtube.com/@FayelinyaVTClips target=blank>@FayelinyaVTClips</a></li>
+		<li class="list-group-item"><i class="bi bi-youtube" style="color:#9146FF"></i> 
+			FayelinyaLunaSub (VOD channel): 
+			<a href=https://youtube.com/@FayelinyaLunaSub target=blank>@FayelinyaLunaSub</a></li>
+	</ul><br>
+
+	<h3>Fun Links</h3>
+	<ul class="list-group">
+		<li class="list-group-item"><i class="bi bi-controller" style="color:#3C3D3F"></i> 
+			Backloggery: 
+			<a href=https://backloggery.com/FayelinaTubaGirl target=blank>FayelinaTubaGirl</a></li>
+		<li class="list-group-item"><i class="bi bi-reddit" style="color:#FF5700"></i> 
+			Reddit: 
+			<a href="https://reddit.com/u/FayelinyaLuna" target=blank>u/FayelinyaLuna</a></li>
+		<li class="list-group-item"><i class="bi bi-github" style="color:#4078C0"></i> 
+			GitHub: 
+			<a href="https://github.com/FayelinyaLuna" target=blank>FayelinyaLuna</a></li>
+		<li class="list-group-item"><i class="bi bi-globe" style="color:white"></i> 
+			Cara: 
+			<a href="https://cara.app/fayelinyaluna" target=blank>FayelinyaLuna</a></li>
+		<li class="list-group-item"><i class="bi bi-globe" style="color:#D35E88"></i> 
+			Art Fight: 
+			<a href="https://artfight.net/~FayelinyaLuna" target=blank>FayelinyaLuna</a></li>
+	</ul><br>
+
+	<!--<h3>Support Links</h3>
+	<ul class="list-group">
+		<li class="list-group-item disabled" aria-disabled="true"><i class="bi bi-globe" style="color:#D11DB3"></i> 
+			Throne: 
+			<a href="https:/throne.com/fayelinyaluna" target=blank>FayelinyaLuna</a></li>
+	</ul><br>-->
 </div>
 </body>
 </html>
