--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
 	<h3>Fun Links</h3>
 	<ul class="list-group">
-		<li class="list-group-item"><i class="bi bi-controller" style="color:#3C3D3F"></i> 
+		<li class="list-group-item"><i class="bi bi-controller" style="color:rgb(0,218,157)"></i> 
 			Backloggery: 
-			<a href=https://backloggery.com/FayelinaTubaGirl target=blank>FayelinaTubaGirl</a></li>
+			<a href=https://backloggery.com/FayelinaTubaGirl target=blank>FayelinaTubaGirl</a></li><!--old color:#3C3D3F-->
 		<li class="list-group-item"><i class="bi bi-reddit" style="color:#FF5700"></i> 
 			Reddit: 
 			<a href="https://reddit.com/u/FayelinyaLuna" target=blank>u/FayelinyaLuna</a></li>
