Favicon and other minor updates

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="icon" type="image/x-icon" href="img/favicon-sonoci_celine.png">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Landing</title>
+	<title>Fayelinya Luna Landing Page</title>
 </head>
 <body>
 <div class="container">
@@ -30,12 +31,12 @@
 			<a href=https://twitch.tv/FayelinyaLuna target=blank>FayelinyaLuna</a></li>
 		<li class="list-group-item"><i class="bi bi-bluesky" style="color:#42BBFF"></i>
 			Bluesky: 
-			<a href=https://bsky.app/profile/fayelinyaluna.moe target=blank>@fayelinyaluna.moe</a></li>
+			<a href=https://bsky.app/profile/fayelinyaluna.moe target=blank>@fayelinyaluna.moe</a> <b>(<i class="bi bi-exclamation-circle"></i> NEW HANDLE)</b></li>
 		<li class="list-group-item"><i class="bi bi-twitter" style="color:#63E3FF"></i>/<i class="bi bi-twitter-x"></i> 
 			Twitter (Public): 
 			<a href=https://twitter.com/FayelinyaLunaVT target=blank>@FayelinyaLunaVT</a></li>
 		<li class="list-group-item"><i class="bi bi-youtube" style="color:#9C2F00"></i> 
-			Fayelinya's Memory Book (VTuber Clips YT): 
+			Fayelinya's Memory Book (VTuber Clips channel): 
 			<a href=https://youtube.com/@FayelinyaVTClips target=blank>@FayelinyaVTClips</a></li>
 		<li class="list-group-item"><i class="bi bi-youtube" style="color:#9146FF"></i> 
 			FayelinyaLunaSub (VOD channel): 
@@ -61,6 +62,7 @@
 			<a href="https://artfight.net/~FayelinyaLuna" target=blank>FayelinyaLuna</a></li>
 	</ul><br>
 
+	<!--These links are intentionally commented out for the time being.-->
 	<!--<h3>Support Links</h3>
 	<ul class="list-group">
 		<li class="list-group-item disabled" aria-disabled="true"><i class="bi bi-globe" style="color:#D11DB3"></i> 
@@ -69,4 +71,8 @@
 	</ul><br>-->
 </div>
 </body>
+<footer>
+	<p align="center">Art credits coming soon.</p>
+	<p align="center">Source code for this site can be found <a href="https://github.com/FayelinyaLuna/Mini-Landing-Site">here</a>.</p>
+</footer>
 </html>
