--- a/index.html
+++ b/index.html
@@ -13,14 +13,26 @@
 
 	<div class=container align=center>
 		<img src="img/header.png" class="img-fluid" alt="about me header">
+		<h1>Fayelinya Luna</h1>
+		<p><i>Tuba cat girl princess, or V-Tuba if you prefer!</i>
+
+		<br>VTuber 
+		<i class="bi bi-stars header"></i> musician 
+		<i class="bi bi-stars header"></i> human artist 
+		<i class="bi bi-stars header"></i> clipper 
+		<i class="bi bi-stars header"></i> writer
+
+		<br><i class="bi bi-music-note-beamed" style="color:#FF9900"></i> Tubist for <a href="https://vtubersymphony.com" target=blank>VTuber Symphony Orchestra</a>
+		
+		<br><i class="bi bi-book-half" style="color:#FF3F00"></i> Writing Contributor for <a href="https://acapellamedia.com" target=blank>Acapella Media</a>
+		<br>
+		<p>Site under construction; excuse the dust!</p>
 	</div>
 
-	<h1>Under Construction</h1>
-	<p>Excuse the dust!</p><br>
-
-	<h3>Main Links</h3>
+	<h1>Main Links</h1>
 	<ul class="list-group">
-		<li class="list-group-item"><i class="bi bi-link-45deg" style="color:#FF9900"></i> 
+		<li class="list-group-item"><i class="bi bi-link-45deg" style="color:#FF9900"></i>
+		<!--<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 640 640"><path class="color" d="M529.2 465.1 269.1 590c-1.6.8-3.4 1.2-5.2 1.2-2.2 0-4.4-.6-6.4-1.8-3.5-2.2-5.6-6-5.6-10.2V455.5l-140.5-58.8c-4.5-1.9-7.4-6.2-7.4-11.1V60.8c0-4.1 2.1-8 5.6-10.2 3.5-2.2 7.9-2.4 11.6-.7l270.4 129.8 127.3-61.1c3.7-1.8 8.1-1.5 11.6.7s5.6 6 5.6 10.2v324.8c-.1 4.6-2.7 8.8-6.9 10.8zM128 79.9v297.7l123.9 51.9v-59.8L174 338.3c-6.1-2.5-9.1-9.5-6.7-15.6 2.5-6.2 9.5-9.1 15.6-6.7l69 27.8v-49.1L174 263.3c-6.1-2.5-9.1-9.5-6.7-15.6 2.5-6.2 9.5-9.1 15.6-6.7l69 27.8v-14.3c0-4.6 2.6-8.8 6.8-10.8l17.8-8.6-103.1-46.9c-6-2.7-8.7-9.9-6-15.9 2.7-6 9.9-8.7 15.9-6l121.3 55.3 59.1-28.4L128 79.9zm384 68.7L275.9 262V560.2L512 446.7V148.6zM321 303.8l135.3-65.4c6-2.9 13.1-.4 16 5.6 2.9 6 .4 13.2-5.6 16l-135.3 65.4c-1.7.8-3.5 1.2-5.2 1.2-4.5 0-8.7-2.5-10.8-6.8-2.8-5.9-.3-13.1 5.6-16zm0 75 135.3-65.4c6-2.9 13.1-.4 16 5.6 2.9 6 .4 13.2-5.6 16l-135.3 65.4c-1.7.8-3.5 1.2-5.2 1.2-4.5 0-8.7-2.5-10.8-6.8-2.8-6-.3-13.1 5.6-16zm0 74.9 135.3-65.4c6-2.9 13.1-.4 16 5.6 2.9 6 .4 13.2-5.6 16l-135.3 65.4c-1.7.8-3.5 1.2-5.2 1.2-4.5 0-8.7-2.5-10.8-6.8-2.8-5.9-.3-13.1 5.6-16z"></path></svg>-->
 			Prettier version: 
 			<a href=https://fayelinyaluna.carrd.co>fayelinyaluna.carrd.co</a></li>
 		<li class="list-group-item"><i class="bi bi-youtube" style="color:red"></i> 
@@ -43,7 +55,7 @@
 			<a href=https://youtube.com/@FayelinyaLunaSub target=blank>@FayelinyaLunaSub</a></li>
 	</ul><br>
 
-	<h3>Fun Links</h3>
+	<h1>Fun Links</h1>
 	<ul class="list-group">
 		<li class="list-group-item"><i class="bi bi-controller" style="color:rgb(0,218,157)"></i> 
 			Backloggery: 
@@ -63,7 +75,7 @@
 	</ul><br>
 
 	<!--These links are intentionally commented out for the time being.-->
-	<!--<h3>Support Links</h3>
+	<!--<h1>Support Links</h1>
 	<ul class="list-group">
 		<li class="list-group-item disabled" aria-disabled="true"><i class="bi bi-globe" style="color:#D11DB3"></i> 
 			Throne: 
