--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<i class="bi bi-stars header"></i> writer
 
 		<br><i class="bi bi-music-note-beamed" style="color:#FF9900"></i> Tubist for <a href="https://vtubersymphony.com" target=blank>VTuber Symphony Orchestra</a>
-		
+
 		<br><i class="bi bi-book-half" style="color:#FF3F00"></i> Writing Contributor for <a href="https://acapellamedia.com" target=blank>Acapella Media</a>
 		<br>
 		<p>Site under construction; excuse the dust!</p>
@@ -43,7 +43,7 @@
 			<a href=https://twitch.tv/FayelinyaLuna target=blank>FayelinyaLuna</a></li>
 		<li class="list-group-item"><i class="bi bi-bluesky" style="color:#42BBFF"></i>
 			Bluesky: 
-			<a href=https://bsky.app/profile/fayelinyaluna.moe target=blank>@fayelinyaluna.moe</a> <b>(<i class="bi bi-exclamation-circle"></i> NEW HANDLE)</b></li>
+			<a href=https://bsky.app/profile/fayelinyaluna.moe target=blank>@fayelinyaluna.moe</a> <b>(<i class="bi bi-exclamation-circle header"></i> NEW HANDLE)</b></li>
 		<li class="list-group-item"><i class="bi bi-twitter" style="color:#63E3FF"></i>/<i class="bi bi-twitter-x"></i> 
 			Twitter (Public): 
 			<a href=https://twitter.com/FayelinyaLunaVT target=blank>@FayelinyaLunaVT</a></li>
@@ -72,6 +72,9 @@
 		<li class="list-group-item"><i class="bi bi-globe" style="color:#D35E88"></i> 
 			Art Fight: 
 			<a href="https://artfight.net/~FayelinyaLuna" target=blank>FayelinyaLuna</a></li>
+		<li class="list-group-item"><i class="bi bi-twitter" style="color:#63E3FF"></i>/<i class="bi bi-twitter-x"></i> 
+			Twitter (<i class="bi bi-lock-fill"></i> Private): 
+			<a href=https://twitter.com/FayelinyaLuna target=blank>@FayelinyaLuna</a> - VTSO members and mutuals may follow request this account</li>
 	</ul><br>
 
 	<!--These links are intentionally commented out for the time being.-->
