--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="icon" type="image/x-icon" href="img/favicon-sonoci_celine.png">
+
+
 	<meta charset="utf-8">
+	<meta name="description" content="Tuba cat girl princess, or V-Tuba if you prefer!">
+  	<meta name="keywords" content="FayelinyaLuna, socials, links, tuba girl, vtuber">
+  	<meta name="author" content="Fayelinya Luna">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Fayelinya Luna Landing Page</title>
+	<meta property="og:image" content="https://cdn.bsky.app/img/banner/plain/did:plc:plb2glbd5iwe6rx4uk2ondk7/bafkreiblwyzwqj7b62q2kkas5agkkdmvd3x6sugtrlpcfdwzluq5ydvehi@jpeg"/>
+
+	<title>Fayelinya Luna - Landing Page</title>
 </head>
 <body>
 <div class="container">
