--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="icon" type="image/x-icon" href="img/favicon-sonoci_celine.png">
 
-
 	<meta charset="utf-8">
-	<meta name="description" content="Tuba cat girl princess, or V-Tuba if you prefer!">
-  	<meta name="keywords" content="FayelinyaLuna, socials, links, tuba girl, vtuber">
+	<meta name="description" content="I'm a tuba cat girl princess VTuber, or V-Tuba if you prefer!">
+  	<meta name="keywords" content="FayelinyaLuna, Fayelinya Luna, socials, links, music, art, tuba, tuba girl, vtuber">
   	<meta name="author" content="Fayelinya Luna">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:image" content="https://cdn.bsky.app/img/banner/plain/did:plc:plb2glbd5iwe6rx4uk2ondk7/bafkreiblwyzwqj7b62q2kkas5agkkdmvd3x6sugtrlpcfdwzluq5ydvehi@jpeg"/>
@@ -19,7 +18,9 @@
 <div class="container">
 
 	<div class=container align=center>
-		<img src="img/header.png" class="img-fluid" alt="about me header">
+		<!--uploaded--> <!--<img src="img/header.png" class="img-fluid" alt="about me header">-->
+		<!--bsky--> <!--<img src="https://cdn.bsky.app/img/banner/plain/did:plc:plb2glbd5iwe6rx4uk2ondk7/bafkreiblwyzwqj7b62q2kkas5agkkdmvd3x6sugtrlpcfdwzluq5ydvehi@jpeg" class="img-fluid" alt="about me header">-->
+		<!--twit--> <img src="https://pbs.twimg.com/profile_banners/1303499243794042881/1737450339/1500x500" class="img-fluid" alt="about me header">
 		<h1>Fayelinya Luna</h1>
 		<p><i>Tuba cat girl princess, or V-Tuba if you prefer!</i>
 
