Adjusted some links to be cleaner. Added additional contact info.

--- a/index.html
+++ b/index.html
@@ -51,19 +51,20 @@
 			<a href=https://twitch.tv/FayelinyaLuna target=blank>FayelinyaLuna</a></li>
 		<li class="list-group-item"><i class="bi bi-bluesky" style="color:#42BBFF"></i>
 			Bluesky: 
-			<a href=https://bsky.app/profile/fayelinyaluna.moe target=blank>@fayelinyaluna.moe</a> <b>(<i class="bi bi-exclamation-circle header"></i> NEW HANDLE)</b></li>
+			<a href=https://bsky.app/profile/did:plc:plb2glbd5iwe6rx4uk2ondk7 target=blank>@fayelinyaluna.moe</a> <b>(<i class="bi bi-exclamation-circle header"></i> NEW HANDLE)</b></li>
 		<li class="list-group-item"><i class="bi bi-twitter" style="color:#63E3FF"></i>/<i class="bi bi-twitter-x"></i> 
 			Twitter (Public): 
 			<a href=https://twitter.com/FayelinyaLunaVT target=blank>@FayelinyaLunaVT</a></li>
 		<li class="list-group-item"><i class="bi bi-youtube" style="color:#9C2F00"></i> 
-			Fayelinya's Memory Book (VTuber Clips channel): 
+			VTuber Clips channel: 
 			<a href=https://youtube.com/@FayelinyaVTClips target=blank>@FayelinyaVTClips</a></li>
 		<li class="list-group-item"><i class="bi bi-youtube" style="color:#9146FF"></i> 
-			FayelinyaLunaSub (VOD channel): 
+			Stream VOD channel: 
 			<a href=https://youtube.com/@FayelinyaLunaSub target=blank>@FayelinyaLunaSub</a></li>
 	</ul><br>
 
 	<h1>Fun Links</h1>
+	<p align="center">I'm found under the same handle on most sites, but I do not guarantee regular updates to all of them!</p>
 	<ul class="list-group">
 		<li class="list-group-item"><i class="bi bi-controller" style="color:rgb(0,218,157)"></i> 
 			Backloggery: 
@@ -95,7 +96,8 @@
 </div>
 </body>
 <footer>
-	<p align="center">Art credits coming soon.</p>
+	<p align="center">Art credits coming soon!</p>
+	<p align="center">For verification, my Discord handles are <b>@FayelinyaLuna</b> and <b>@FayelinyaLunaVT</b> <br>(<a href="mailto:fayelinyaluna@protonmail.com">Email</a> or ask in public servers before friend request/first DM, please!)<br>
 	<p align="center">Source code for this site can be found <a href="https://github.com/FayelinyaLuna/Mini-Landing-Site">here</a>.</p>
 </footer>
 </html>
