Changed secondary YT channel link titles

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 			Twitter (Public): 
 			<a href=https://twitter.com/FayelinyaLunaVT target=blank>@FayelinyaLunaVT</a></li>
 		<li class="list-group-item"><i class="bi bi-youtube" style="color:#9C2F00"></i> 
-			VTuber Clips channel: 
+			Fayelinya's Memory Book: 
 			<a href=https://youtube.com/@FayelinyaVTClips target=blank>@FayelinyaVTClips</a></li>
 		<li class="list-group-item"><i class="bi bi-youtube" style="color:#9146FF"></i> 
-			Stream VOD channel: 
+			Stream Archive (WIP): 
 			<a href=https://youtube.com/@FayelinyaLunaSub target=blank>@FayelinyaLunaSub</a></li>
 	</ul><br>
 
