removed "new handle" from Bluesky. May become a tooltip later.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
 			<a href=https://twitch.tv/FayelinyaLuna target=blank>FayelinyaLuna</a></li>
 		<li class="list-group-item"><i class="bi bi-bluesky" style="color:#42BBFF"></i>
 			Bluesky: 
-			<a href=https://bsky.app/profile/did:plc:plb2glbd5iwe6rx4uk2ondk7 target=blank>@fayelinyaluna.moe</a> <b>(<i class="bi bi-exclamation-circle header"></i> NEW HANDLE)</b></li>
+			<a href=https://bsky.app/profile/did:plc:plb2glbd5iwe6rx4uk2ondk7 target=blank>@fayelinyaluna.moe</a>
+				<!--<span class="tooltip">
+					<i class="bi bi-exclamation-circle header"></i>
+				</span>-->
+			</li>
 		<li class="list-group-item"><i class="bi bi-twitter" style="color:#63E3FF"></i>/<i class="bi bi-twitter-x"></i> 
 			Twitter (Public): 
 			<a href=https://twitter.com/FayelinyaLunaVT target=blank>@FayelinyaLunaVT</a></li>
@@ -64,7 +68,8 @@
 	</ul><br>
 
 	<h1>Fun Links</h1>
-	<p align="center">I'm found under the same handle on most sites, but I do not guarantee regular updates to all of them!</p>
+	<p align="center">I'm found under the same handle on most sites, but I do not guarantee regular updates to all of them!<br>
+	VTSO members and mutuals may follow request my private Twitter account linked below.</p>
 	<ul class="list-group">
 		<li class="list-group-item"><i class="bi bi-controller" style="color:rgb(0,218,157)"></i> 
 			Backloggery: 
@@ -83,7 +88,7 @@
 			<a href="https://artfight.net/~FayelinyaLuna" target=blank>FayelinyaLuna</a></li>
 		<li class="list-group-item"><i class="bi bi-twitter" style="color:#63E3FF"></i>/<i class="bi bi-twitter-x"></i> 
 			Twitter (<i class="bi bi-lock-fill"></i> Private): 
-			<a href=https://twitter.com/FayelinyaLuna target=blank>@FayelinyaLuna</a> - VTSO members and mutuals may follow request this account</li>
+			<a href=https://twitter.com/FayelinyaLuna target=blank>@FayelinyaLuna</a></li>
 	</ul><br>
 
 	<!--These links are intentionally commented out for the time being.-->
