Updated header and slight text changes. Convert all images to webp (sorry not sorry) and added new ones

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="icon" type="image/x-icon" href="img/favicon-sonoci_celine.png">
+	<link rel="icon" type="image/x-icon" href="img/favicon-sonoci_celine.webp">
 
 	<meta charset="utf-8">
-	<meta name="description" content="I'm a tuba cat girl princess VTuber, or V-Tuba if you prefer!">
+	<meta name="description" content="Tuba cat girl princess VTuber, or V-Tuba if you prefer!
+musician // human artist // clipper // writer">
   	<meta name="keywords" content="FayelinyaLuna, Fayelinya Luna, socials, links, music, art, tuba, tuba girl, vtuber">
   	<meta name="author" content="Fayelinya Luna">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta property="og:image" content="https://cdn.bsky.app/img/banner/plain/did:plc:plb2glbd5iwe6rx4uk2ondk7/bafkreiblwyzwqj7b62q2kkas5agkkdmvd3x6sugtrlpcfdwzluq5ydvehi@jpeg"/>
+	<meta property="og:image" content="img/faye_prismIcon_WEB.webp">
 
 	<title>Fayelinya Luna - Landing Page</title>
 </head>
@@ -18,11 +19,11 @@
 <div class="container">
 
 	<div class=container align=center>
-		<!--uploaded--> <!--<img src="img/header.png" class="img-fluid" alt="about me header">-->
+		<!--uploaded--> <img src="img/banner_main.webp" class="img-fluid" alt="about me header">
 		<!--bsky--> <!--<img src="https://cdn.bsky.app/img/banner/plain/did:plc:plb2glbd5iwe6rx4uk2ondk7/bafkreiblwyzwqj7b62q2kkas5agkkdmvd3x6sugtrlpcfdwzluq5ydvehi@jpeg" class="img-fluid" alt="about me header">-->
-		<!--twit--> <img src="https://pbs.twimg.com/profile_banners/1303499243794042881/1763433947/1500x500" class="img-fluid" alt="about me header">
-		<h1>Fayelinya Luna</h1>
-		<p><i>Tuba cat girl princess, or V-Tuba if you prefer!</i>
+		<!--twit--> <!--<img src="https://pbs.twimg.com/profile_banners/1303499243794042881/1763433947/1500x500" class="img-fluid" alt="about me header">
+		<h1>Fayelinya Luna</h1>-->
+		<p><i>Tuba cat girl princess VTuber, or V-Tuba if you prefer!</i>
 
 		<br>VTuber 
 		<i class="bi bi-stars header"></i> musician 
@@ -30,9 +31,9 @@
 		<i class="bi bi-stars header"></i> clipper 
 		<i class="bi bi-stars header"></i> writer
 
-		<br><i class="bi bi-music-note-beamed" style="color:#FF9900"></i> Tubist for <a href="https://vtubersymphony.com" target=blank>VTuber Symphony Orchestra</a>
+		<br><i class="bi bi-music-note-beamed" style="color:#FF9900"></i> Tubist for <a href="https://vtubersymphony.com" target=blank>VTuber Symphony Orchestra</a> (VTSO)
 
-		<br><i class="bi bi-book-half" style="color:#FF3F00"></i> Writing Contributor for <a href="https://acapellamedia.com" target=blank>Acapella Media</a>
+		<br><i class="bi bi-book-half" style="color:#FF3F00"></i> Writing Contributor for <a href="https://acapellamedia.com" target=blank>Acapella Media</a> and <a href="https://enreco-archive.net" target=blank>ENreco Archive</a> (Chapter 2)
 		<br>
 		<p>Site under construction; excuse the dust!</p>
 	</div>
