Edited meta tags to look better

--- a/index.html
+++ b/index.html
@@ -6,12 +6,31 @@
 	<link rel="icon" type="image/x-icon" href="img/favicon-sonoci_celine.webp">
 
 	<meta charset="utf-8">
+
+ <!--Social Media Meta Tags-->
+	<!-- Primary Meta Tags -->
+	<title>Fayelinya Luna - Landing Page</title>
+	<meta name="title" content="Fayelinya Luna - Landing Page" />
 	<meta name="description" content="Tuba cat girl princess VTuber, or V-Tuba if you prefer!
-musician // human artist // clipper // writer">
-  	<meta name="keywords" content="FayelinyaLuna, Fayelinya Luna, socials, links, music, art, tuba, tuba girl, vtuber">
-  	<meta name="author" content="Fayelinya Luna">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta property="og:image" content="img/faye_prismIcon_WEB.webp">
+	musician // human artist // clipper // writer" />
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://fayelinyaluna.moe/" />
+	<meta property="og:title" content="Fayelinya Luna - Landing Page" />
+	<meta property="og:description" content="Tuba cat girl princess VTuber, or V-Tuba if you prefer!
+	musician // human artist // clipper // writer" />
+	<meta property="og:image" content="img\faye_prismIcon_WEB.webp" />
+
+	<!-- X (Twitter) -->
+	<meta property="twitter:card" content="summary_large_image" />
+	<meta property="twitter:url" content="https://fayelinyaluna.moe/" />
+	<meta property="twitter:title" content="Fayelinya Luna - Landing Page" />
+	<meta property="twitter:description" content="Tuba cat girl princess VTuber, or V-Tuba if you prefer!
+	musician // human artist // clipper // writer" />
+	<meta property="twitter:image" content="img\faye_prismIcon_WEB.webp" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
 
 	<title>Fayelinya Luna - Landing Page</title>
 </head>
