Fixed meta preview icon

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:title" content="Fayelinya Luna - Landing Page" />
 	<meta property="og:description" content="Tuba cat girl princess VTuber, or V-Tuba if you prefer!
 	musician // human artist // clipper // writer" />
-	<meta property="og:image" content="img\faye_prismIcon_WEB.webp" />
+	<meta property="og:image" content="img\faye_prismIcon_WEB.jpg" />
 
 	<!-- X (Twitter) -->
 	<meta property="twitter:card" content="summary_large_image" />
@@ -28,7 +28,7 @@
 	<meta property="twitter:title" content="Fayelinya Luna - Landing Page" />
 	<meta property="twitter:description" content="Tuba cat girl princess VTuber, or V-Tuba if you prefer!
 	musician // human artist // clipper // writer" />
-	<meta property="twitter:image" content="img\faye_prismIcon_WEB.webp" />
+	<meta property="twitter:image" content="img\faye_prismIcon_WEB.jpg" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
 
